// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageLoader Snapshots Messages 1`] = `
<div
  className="sc-AykKD ggtnrM"
>
  <div
    className="sc-AykKE fffipx"
  />
</div>
`;

exports[`MessageLoader Snapshots Multiple words 1`] = `
<div
  className="sc-AykKD ggtnrM"
>
  <div
    className="sc-AykKE fffipx"
  >
    <div
      className="sc-AykKG hyXFcy"
    >
      Reticulating splines...
    </div>
  </div>
</div>
`;

exports[`MessageLoader Snapshots invalid Messages 1`] = `
<div
  className="sc-AykKD ggtnrM"
>
  <div
    className="sc-AykKE fffipx"
  />
</div>
`;
